--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /swing/Ngay34_Daluong_MultiThread/build/
 /swing/Ngay34_Daluong_MultiThread/dist/
 /swing/JavaApplication1/build/
+/swing/file/nbproject/private/
+/swing/file/build/
